data/derived/comb/progs/unify/prog8487.ml.out
Characters 138-139:
  | h::t -> [((h + b)/10)]::[((h + b) mod 10)]::t
                                                ^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
